--- a/file-select/index.html
+++ b/file-select/index.html
@@ -88,7 +88,7 @@
         const user = JSON.parse(localStorage.getItem("user"));
 
         if (!user) {
-            window.location.href = "index.html";  // Redirect if no user is logged in
+            window.location.href = "/login";  // Redirect if no user is logged in
         }
 
         const createFileButton = document.getElementById("create-file-btn");
@@ -147,7 +147,7 @@
             localStorage.setItem("selectedFile", JSON.stringify(selectedFile));
 
             // Redirect to the file editing page (or any other page you want)
-            window.location.href = "fileEditor.html";
+            window.location.href = "/sheet";
         }
 
         // Delete a file from localStorage
