--- a/sheet/index.html
+++ b/sheet/index.html
@@ -3,241 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Character Editor</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title id="pageTitle">D&D Character Sheet - </title>
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f7fa;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .container {
-            background-color: white;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 700px;
-        }
-        h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-            color: #333;
-        }
-        input, select {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .skills {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 15px;
-            margin-bottom: 20px;
-        }
-        .skill {
-            display: flex;
-            align-items: center;
-        }
-        .skill label {
-            flex: 1;
-        }
-        .button-group {
-            display: flex;
-            justify-content: space-between;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .button-group button {
-            flex: 1;
-        }
-        .button-group button:not(:last-child) {
-            margin-right: 10px;
-        }
+        body { font-family: 'Georgia', serif; background-color: #f4f1de; margin: 0; padding: 20px; }
+        .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
+        h2 { text-align: center; }
+        .char-sheet { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+        .section { border: 2px solid black; padding: 10px; border-radius: 5px; background: #eae0c8; }
+        .section h3 { text-align: center; margin-top: 0; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { border: 1px solid black; padding: 8px; text-align: left; }
+        td[contenteditable="true"] { background-color: #f0f0f0; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>D&D Character Sheet</h2>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter name">
-        </div>
-        <div class="form-group">
-            <label for="class">Class</label>
-            <input type="text" id="class" placeholder="Enter class">
-        </div>
-        <div class="form-group">
-            <label for="race">Race</label>
-            <input type="text" id="race" placeholder="Enter race">
-        </div>
-        <div class="form-group">
-            <label for="background">Background</label>
-            <input type="text" id="background" placeholder="Enter background">
-        </div>
-        <div class="form-group">
-            <label for="alignment">Alignment</label>
-            <input type="text" id="alignment" placeholder="Enter alignment">
-        </div>
-        <div class="form-group">
-            <label for="level">Level</label>
-            <input type="number" id="level" placeholder="Enter level">
-        </div>
-        <div class="form-group">
-            <label for="experience">Experience</label>
-            <input type="number" id="experience" placeholder="Enter experience">
-        </div>
-        <div class="form-group">
-            <label for="age">Age</label>
-            <input type="number" id="age" placeholder="Enter age">
-        </div>
-        <div class="form-group">
-            <label for="weight">Weight</label>
-            <input type="text" id="weight" placeholder="Enter weight">
-        </div>
-        <div class="form-group">
-            <label for="height">Height</label>
-            <input type="text" id="height" placeholder="Enter height">
-        </div>
-        <div class="form-group">
-            <label for="armorClass">Armor Class</label>
-            <input type="number" id="armorClass" placeholder="Enter armor class">
-        </div>
-        <div class="form-group">
-            <label for="hitPoints">Hit Points</label>
-            <input type="number" id="hitPoints" placeholder="Enter hit points">
-        </div>
-
-        <!-- Skills Section -->
-        <div class="skills">
-            <div class="skill"><label for="acrobatics">Acrobatics</label><input type="number" id="acrobatics"></div>
-            <div class="skill"><label for="animalHandling">Animal Handling</label><input type="number" id="animalHandling"></div>
-            <div class="skill"><label for="arcana">Arcana</label><input type="number" id="arcana"></div>
-            <div class="skill"><label for="athletics">Athletics</label><input type="number" id="athletics"></div>
-            <div class="skill"><label for="deception">Deception</label><input type="number" id="deception"></div>
-            <div class="skill"><label for="history">History</label><input type="number" id="history"></div>
-            <div class="skill"><label for="insight">Insight</label><input type="number" id="insight"></div>
-            <div class="skill"><label for="intimidation">Intimidation</label><input type="number" id="intimidation"></div>
-            <div class="skill"><label for="investigation">Investigation</label><input type="number" id="investigation"></div>
-            <div class="skill"><label for="medicine">Medicine</label><input type="number" id="medicine"></div>
-            <div class="skill"><label for="nature">Nature</label><input type="number" id="nature"></div>
-            <div class="skill"><label for="perception">Perception</label><input type="number" id="perception"></div>
-            <div class="skill"><label for="performance">Performance</label><input type="number" id="performance"></div>
-            <div class="skill"><label for="persuation">Persuasion</label><input type="number" id="persuation"></div>
-            <div class="skill"><label for="religion">Religion</label><input type="number" id="religion"></div>
-            <div class="skill"><label for="sleightOfHand">Sleight of Hand</label><input type="number" id="sleightOfHand"></div>
-            <div class="skill"><label for="stealth">Stealth</label><input type="number" id="stealth"></div>
-            <div class="skill"><label for="survival">Survival</label><input type="number" id="survival"></div>
-        </div>
-
-        <div class="button-group">
-            <button onclick="saveCharacter()">Save Character</button>
-            <button onclick="loadCharacter()">Load Character</button>
-        </div>
+        <h2 id="characterTitle">D&D Character Sheet</h2>
+        <button id="loadCharacterButton">Load Character</button>
+        <div id="characterSheet" class="char-sheet"></div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js"></script>
+
     <script>
-        const characterData = {
-            core: {
-                name: "Jhon Roe",
-                class: "barbarian",
-                race: "Mountain Dwarf",
-                background: "Depressed",
-                alignment: "Neutral",
-                gender: "Male",
-                deity: "None",
-                age: 27,
-                weight: "50kg",
-                height: "1.2m",
-                level: 5,
-                experience: 0
-            },
-            combat: {
-                maxHitPoints: 23,
-                currentHitPoints: 23,
-                armorClass: 15
-            },
-            stats: {
-                strength: { score: 16 },
-                dexterity: { score: 13 },
-                constitution: { score: 15 },
-                intelligence: { score: 10 },
-                wisdom: { score: 10 },
-                charisma: { score: 12 }
-            },
-            skillsprof: {
-                acrobatics: 0,
-                animalHandling: 0,
-                arcana: 0,
-                athletics: 1,
-                deception: 0,
-                history: 0,
-                insight: 0,
-                intimidation: 0,
-                investigation: 0,
-                medicine: 0,
-                nature: 0,
-                perception: 0,
-                performance: 0,
-                persuasion: 0,
-                religion: 0,
-                sleightOfHand: 0,
-                stealth: 0,
-                survival: 1
-            }
+        const firebaseConfig = {
+          apiKey: "AIzaSyBtugHGiEF4zA3h7cBJwtOp_CRj84t2Z88",
+          authDomain: "mertek-dnd-site.firebaseapp.com",
+          projectId: "mertek-dnd-site",
+          storageBucket: "mertek-dnd-site.appspot.com",
+          messagingSenderId: "62404268441",
+          appId: "1:62404268441:web:edc1070ec1da54e5e08308",
+          measurementId: "G-1N6NH3NKN5"
         };
 
-        function saveCharacter() {
-            localStorage.setItem('character', JSON.stringify(characterData));
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+
+        const user = JSON.parse(localStorage.getItem("user"));
+
+        document.getElementById("loadCharacterButton").addEventListener("click", loadCharacter);
+
+        async function loadCharacter() {
+            const characterRef = db.collection('characters').doc(user.uid); // User-based character
+            const doc = await characterRef.get();
+            
+            if (doc.exists) {
+                const characterData = doc.data();
+                document.getElementById("pageTitle").textContent = `D&D Character Sheet - ${characterData.main.core.name}`;
+                document.getElementById("characterTitle").textContent = characterData.main.core.name;
+                displayCharacterSheet(characterData);
+            } else {
+                alert("No character data found!");
+            }
         }
 
-        function loadCharacter() {
-            const loadedData = JSON.parse(localStorage.getItem('character'));
-            if (loadedData) {
-                document.getElementById("name").value = loadedData.core.name;
-                document.getElementById("class").value = loadedData.core.class;
-                document.getElementById("race").value = loadedData.core.race;
-                document.getElementById("background").value = loadedData.core.background;
-                document.getElementById("alignment").value = loadedData.core.alignment;
-                document.getElementById("level").value = loadedData.core.level;
-                document.getElementById("experience").value = loadedData.core.experience;
-                document.getElementById("age").value = loadedData.core.age;
-                document.getElementById("weight").value = loadedData.core.weight;
-                document.getElementById("height").value = loadedData.core.height;
-                document.getElementById("armorClass").value = loadedData.combat.armorClass;
-                document.getElementById("hitPoints").value = loadedData.combat.maxHitPoints;
+        function formatKeyName(key) {
+            return key.replace(/([A-Z])/g, ' $1').replace(/^./, function(str) { return str.toUpperCase(); }).trim();
+        }
 
-                // Skills
-                Object.keys(loadedData.skillsprof).forEach(skill => {
-                    document.getElementById(skill).value = loadedData.skillsprof[skill];
+        function displayCharacterSheet(characterData) {
+            const container = document.getElementById("characterSheet");
+            container.innerHTML = "";
+            
+            function createEditableRow(key, value, parent) {
+                const row = document.createElement("tr");
+                const keyCell = document.createElement("td");
+                keyCell.textContent = formatKeyName(key);
+                const valueCell = document.createElement("td");
+                valueCell.textContent = value;
+                valueCell.setAttribute("contenteditable", "true");
+                valueCell.addEventListener("blur", function() {
+                    parent[key] = isNaN(valueCell.textContent) ? valueCell.textContent : Number(valueCell.textContent);
+                    saveCharacterData(characterData);
                 });
+                row.appendChild(keyCell);
+                row.appendChild(valueCell);
+                return row;
             }
+
+            function createSection(title, data, parent) {
+                const section = document.createElement("div");
+                section.classList.add("section");
+                const header = document.createElement("h3");
+                header.textContent = title;
+                section.appendChild(header);
+                const table = document.createElement("table");
+                for (const key in data) {
+                    if (typeof data[key] === "object" && !Array.isArray(data[key])) {
+                        section.appendChild(createSection(formatKeyName(key), data[key], data[key]));
+                    } else {
+                        table.appendChild(createEditableRow(key, data[key], parent));
+                    }
+                }
+                section.appendChild(table);
+                return section;
+            }
+
+            // Dynamically generate the sections of the character sheet
+            container.appendChild(createSection("Core Stats", characterData.main.core, characterData.main.core));
+            container.appendChild(createSection("Combat Stats", characterData.main.combat, characterData.main.combat));
+            container.appendChild(createSection("Abilities", characterData.main.stats, characterData.main.stats));
+            container.appendChild(createSection("Skills", characterData.main.skillsprof, characterData.main.skillsprof));
+            container.appendChild(createSection("Wealth", characterData.equipmentAndWealth.wealth, characterData.equipmentAndWealth.wealth));
+            container.appendChild(createSection("Equipment", characterData.equipmentAndWealth.equipment, characterData.equipmentAndWealth.equipment));
+        }
+
+        async function saveCharacterData(characterData) {
+            const characterRef = db.collection('characters').doc(user.uid); // Save based on the logged-in user
+            await characterRef.set(characterData);
+            console.log("Character data saved successfully!");
         }
     </script>
 </body>
