--- a/sheet/index.html
+++ b/sheet/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="pageTitle">D&D Character Sheet - </title>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore-compat.js"></script>
     <style>
         body { font-family: 'Georgia', serif; background-color: #f4f1de; margin: 0; padding: 20px; }
         .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
@@ -19,49 +22,39 @@
 <body>
     <div class="container">
         <h2 id="characterTitle">D&D Character Sheet</h2>
-        <button id="loadCharacterButton">Load Character</button>
         <div id="characterSheet" class="char-sheet"></div>
     </div>
 
-    <!-- Firebase App and SDK with module support -->
-    <script type="module">
-        // Import Firebase SDK modules using ES6 import
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js';
-        import { getAuth } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js';
-        import { getFirestore, doc, getDoc, setDoc } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js';
-
+    <script>
         const firebaseConfig = {
-          apiKey: "AIzaSyBtugHGiEF4zA3h7cBJwtOp_CRj84t2Z88",
-          authDomain: "mertek-dnd-site.firebaseapp.com",
-          projectId: "mertek-dnd-site",
-          storageBucket: "mertek-dnd-site.appspot.com",
-          messagingSenderId: "62404268441",
-          appId: "1:62404268441:web:edc1070ec1da54e5e08308",
-          measurementId: "G-1N6NH3NKN5"
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_AUTH_DOMAIN",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_STORAGE_BUCKET",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID"
         };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth();
-        const db = getFirestore();
-
-        // For simulating the user data for now (replace with actual auth logic)
-        const user = JSON.parse(localStorage.getItem("user"));
-
-        document.getElementById("loadCharacterButton").addEventListener("click", loadCharacter);
-
-        async function loadCharacter() {
-            const characterRef = doc(db, 'characters', user.uid); // User-based character
-            const docSnap = await getDoc(characterRef);
-            
-            if (docSnap.exists()) {
-                const characterData = docSnap.data();
-                document.getElementById("pageTitle").textContent = `D&D Character Sheet - ${characterData.main.core.name}`;
-                document.getElementById("characterTitle").textContent = characterData.main.core.name;
-                displayCharacterSheet(characterData);
-            } else {
-                alert("No character data found!");
-            }
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        
+        const selectedFileId = localStorage.getItem("selectedFileId");
+        if (!selectedFileId) {
+            alert("No file selected!");
+            window.location.href = "fileSelection.html";
+        } else {
+            db.collection("characterSheets").doc(selectedFileId).get()
+                .then(doc => {
+                    if (doc.exists) {
+                        const characterData = doc.data();
+                        document.getElementById("pageTitle").textContent = `D&D Character Sheet - ${characterData.title}`;
+                        document.getElementById("characterTitle").textContent = characterData.title;
+                        displayCharacterSheet(characterData);
+                    } else {
+                        alert("Character sheet not found!");
+                        window.location.href = "fileSelection.html";
+                    }
+                })
+                .catch(error => console.error("Error loading character sheet:", error));
         }
 
         function formatKeyName(key) {
@@ -81,7 +74,6 @@
                 valueCell.setAttribute("contenteditable", "true");
                 valueCell.addEventListener("blur", function() {
                     parent[key] = isNaN(valueCell.textContent) ? valueCell.textContent : Number(valueCell.textContent);
-                    saveCharacterData(characterData);
                 });
                 row.appendChild(keyCell);
                 row.appendChild(valueCell);
@@ -106,19 +98,12 @@
                 return section;
             }
 
-            // Dynamically generate the sections of the character sheet
             container.appendChild(createSection("Core Stats", characterData.main.core, characterData.main.core));
             container.appendChild(createSection("Combat Stats", characterData.main.combat, characterData.main.combat));
             container.appendChild(createSection("Abilities", characterData.main.stats, characterData.main.stats));
             container.appendChild(createSection("Skills", characterData.main.skillsprof, characterData.main.skillsprof));
             container.appendChild(createSection("Wealth", characterData.equipmentAndWealth.wealth, characterData.equipmentAndWealth.wealth));
             container.appendChild(createSection("Equipment", characterData.equipmentAndWealth.equipment, characterData.equipmentAndWealth.equipment));
-        }
-
-        async function saveCharacterData(characterData) {
-            const characterRef = doc(db, 'characters', user.uid); // Save based on the logged-in user
-            await setDoc(characterRef, characterData);
-            console.log("Character data saved successfully!");
         }
     </script>
 </body>
