--- a/sheet/index.html
+++ b/sheet/index.html
@@ -3,68 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="pageTitle">D&D Character Sheet - </title>
-    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore-compat.js"></script>
+    <title id="pageTitle">D&D Character Sheet</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Georgia', serif; background-color: #f4f1de; margin: 0; padding: 20px; }
-        .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
-        h2 { text-align: center; }
-        .char-sheet { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-        .section { border: 2px solid black; padding: 10px; border-radius: 5px; background: #eae0c8; }
-        .section h3 { text-align: center; margin-top: 0; }
-        table { width: 100%; border-collapse: collapse; }
-        th, td { border: 1px solid black; padding: 8px; text-align: left; }
-        td[contenteditable="true"] { background-color: #f0f0f0; }
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f7fa;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+        .section {
+            margin-bottom: 20px;
+            padding: 15px;
+            border-radius: 6px;
+            background: #e9ecef;
+        }
+        h3 {
+            margin-bottom: 10px;
+            color: #007bff;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background: white;
+        }
+        td {
+            padding: 8px;
+            border: 1px solid #ddd;
+        }
+        td[contenteditable="true"] {
+            background-color: #fff9c4;
+            cursor: text;
+        }
+        td[contenteditable="true"]:focus {
+            background-color: #fff176;
+        }
     </style>
 </head>
 <body>
+
     <div class="container">
         <h2 id="characterTitle">D&D Character Sheet</h2>
-        <div id="characterSheet" class="char-sheet"></div>
+        <div id="characterSheet"></div>
     </div>
 
     <script>
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-        
-        const selectedFileId = localStorage.getItem("selectedFileId");
-        if (!selectedFileId) {
-            alert("No file selected!");
-            window.location.href = "fileSelection.html";
-        } else {
-            db.collection("characterSheets").doc(selectedFileId).get()
-                .then(doc => {
-                    if (doc.exists) {
-                        const characterData = doc.data();
-                        document.getElementById("pageTitle").textContent = `D&D Character Sheet - ${characterData.title}`;
-                        document.getElementById("characterTitle").textContent = characterData.title;
-                        displayCharacterSheet(characterData);
-                    } else {
-                        alert("Character sheet not found!");
-                        window.location.href = "fileSelection.html";
-                    }
-                })
-                .catch(error => console.error("Error loading character sheet:", error));
-        }
+        let characterData = {};
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const selectedFile = JSON.parse(localStorage.getItem("selectedFile"));
+
+            if (!selectedFile) {
+                alert("No file selected! Redirecting...");
+                window.location.href = "/"; // Redirect to file selection page
+                return;
+            }
+
+            characterData = selectedFile.content;
+
+            document.getElementById("pageTitle").textContent = `D&D Character Sheet - ${selectedFile.title}`;
+            document.getElementById("characterTitle").textContent = selectedFile.title;
+
+            displayCharacterSheet();
+        });
 
         function formatKeyName(key) {
-            return key.replace(/([A-Z])/g, ' $1').replace(/^./, function(str) { return str.toUpperCase(); }).trim();
+            return key.replace(/([A-Z])/g, ' $1').replace(/^./, str => str.toUpperCase()).trim();
         }
 
-        function displayCharacterSheet(characterData) {
+        function displayCharacterSheet() {
             const container = document.getElementById("characterSheet");
             container.innerHTML = "";
-            
+
             function createEditableRow(key, value, parent) {
                 const row = document.createElement("tr");
                 const keyCell = document.createElement("td");
@@ -72,8 +95,9 @@
                 const valueCell = document.createElement("td");
                 valueCell.textContent = value;
                 valueCell.setAttribute("contenteditable", "true");
-                valueCell.addEventListener("blur", function() {
+                valueCell.addEventListener("blur", function () {
                     parent[key] = isNaN(valueCell.textContent) ? valueCell.textContent : Number(valueCell.textContent);
+                    saveToLocalStorage();
                 });
                 row.appendChild(keyCell);
                 row.appendChild(valueCell);
@@ -87,6 +111,7 @@
                 header.textContent = title;
                 section.appendChild(header);
                 const table = document.createElement("table");
+
                 for (const key in data) {
                     if (typeof data[key] === "object" && !Array.isArray(data[key])) {
                         section.appendChild(createSection(formatKeyName(key), data[key], data[key]));
@@ -105,6 +130,13 @@
             container.appendChild(createSection("Wealth", characterData.equipmentAndWealth.wealth, characterData.equipmentAndWealth.wealth));
             container.appendChild(createSection("Equipment", characterData.equipmentAndWealth.equipment, characterData.equipmentAndWealth.equipment));
         }
+
+        function saveToLocalStorage() {
+            let selectedFile = JSON.parse(localStorage.getItem("selectedFile"));
+            selectedFile.content = characterData;
+            localStorage.setItem("selectedFile", JSON.stringify(selectedFile));
+        }
     </script>
+
 </body>
 </html>
