--- a/sheet/index.html
+++ b/sheet/index.html
@@ -68,7 +68,7 @@
 
             if (!selectedFile) {
                 alert("No file selected! Redirecting...");
-                window.location.href = "/"; // Redirect to file selection page
+                window.location.href = "/file-select"; // Redirect to file selection page
                 return;
             }
 
